# H20

./: .gitignore  README.md  apptree.txt  build_app.py  msi.json  requirements.txt
.github/workflows/: build.yml  main.yml
CommandLineInterface/: setup.cfg  setup.py
CommandLineInterface/CLI-py/: main.py
CommandLineInterface/CLI_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
H20Installer/: H20Installer.wixproj  License.rtf  Package.wxs  Transform.xslt
examples/: example1.h20
src/: main.py  test.h20
src/Errors/: __init__.py
